[package]
name = "dumplingh"
description = "Issue/PR exporter for GitHub"
repository = "https://github.com/nabijaczleweli/dumplingh"
documentation = "https://rawcdn.githack.com/nabijaczleweli/dumplingh/doc/dumplingh/index.html"
readme = "README.md"
keywords = ["dump", "api", "github"]
categories = ["api-bindings"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.2.0"
# Remember to also update in dumplingh.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]

[dependencies]
serde_derive = "1.0"
lazy_static = "0.2"
serde_json = "1.0"
reqwest = "0.8"
serde = "1.0"
clap = "2.27"


[[bin]]
name = "dumplingh"
test = false
doc = false
